# Whetstone

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/eval/: gsm8k_bench.yaml  gsm8k_bench_fewshot.yaml  gsm8k_mock.yaml  gsm8k_smoke.yaml  openr1_math_smoke.yaml  taco_cobalt_smoke.yaml
configs/model/: qwen3_06b_base.yaml
configs/runtime/: cpu_debug.yaml  single_gpu.yaml  torchrun_2gpu.yaml
configs/train/: math_rl_smoke.yaml  sft_math_overfit.yaml  sft_math_smoke.yaml
scripts/: eval_smoke.py  inspect_dataset.py  package_repo.py  run_eval.py  summarize_run.py  train_math_rl.py  train_sft.py  validate_training_run.py  verify_jsonl.py
tests/: conftest.py  test_code_sandbox.py  test_config_schema.py  test_dataset_adapters.py  test_distributed_sharding.py  test_eval_runner.py  test_generation.py  test_group_advantage.py  test_hash.py  test_logging.py  test_logprobs.py  test_loss_accumulation.py  test_math_parser.py  test_math_rollout.py  test_math_verify.py  test_metrics.py  test_prediction_schema.py  test_prompt_templates.py  test_rl_loss.py  test_sft_collator.py  test_sft_examples.py  test_tokenization.py  test_train_config.py  test_train_integration.py  test_training_artifact_validation.py
whetstone/algorithms/: __init__.py  math_rl.py  sft.py
whetstone/core/: __init__.py  config.py  paths.py  registry.py  run_id.py  seed.py  types.py
whetstone/data/: __init__.py  base.py  gsm8k.py  openr1_math.py  taco_cobalt.py  tiny.py
whetstone/distributed/: __init__.py  init.py  metrics.py  sharding.py
whetstone/eval/: __init__.py  metrics.py  prediction_io.py  runner.py  samples.py
whetstone/models/: __init__.py  generation.py  loader.py  tokenization.py
whetstone/prompts/: __init__.py  base.py  code.py  math.py  templates.py
whetstone/rollout/: __init__.py  group_advantage.py  math_rollout.py
whetstone/train/: __init__.py  checkpointing.py  collators.py  (+9 more)
(+10 files in other folders)
