[project]
name = "whetstone"
version = "0.1.0"
description = "A from-scratch post-training laboratory for verifiable reasoning."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=5.0.0",
    "einops>=0.8.2",
    "jax[cuda12]>=0.4.30",
    "numpy>=2.4.6",
    "pydantic>=2.0",
    "pyyaml>=6.0.3",
    "safetensors>=0.8.0",
    "torch>=2.12.0",
    "tqdm>=4.68.2",
    "transformers>=4.51.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["whetstone"]

[[tool.uv.index]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }

[dependency-groups]
dev = ["pytest>=9.0.3", "ruff>=0.15.16"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["whetstone", "scripts", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",
    "N",    # pep8-naming
    "UP",
    "B",
    "C4",
    "SIM",  # flake8-simplify
    "RUF",
    "PERF",
    "PIE",
    "PTH",
    "TID",
    "PL",
    "NPY",
]
ignore = ["E501", "PLR0913", "PLR2004", "N812", "B008", "SIM108", "PLR0915"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PLR2004", "S101", "N802"]
"scripts/**/*.py" = ["T201"]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["whetstone"]
combine-as-imports = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
